--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <title>KOSMO - Multi Purpose Bootstrap 4 Admin Template</title>
+  <meta name="author" content="Kodekoop">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
