--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,7 @@
   <script src="assets/libs/jquery/jquery.min.js"></script>
   <!-- BEGIN PAGE LEVEL PLUGINS -->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <!--<script src="https://maps.google.com/maps/api/js?libraries=geometry&v=3.26&key=AIzaSyBBjLDxcCjc4s9ngpR11uwBWXRhyp3KPYM"></script>-->
   <!-- END PAGE LEVEL PLUGINS -->
 </body>
