--- a/src/index.html
+++ b/src/index.html
@@ -81,11 +81,17 @@
 </head>
 <body class="ks-navbar-fixed ks-sidebar-default ks-sidebar-position-fixed ks-page-header-fixed ks-theme-primary ks-page-loading">
   <app-root class="app-root"></app-root>
-
+ <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-128301622-1', 'auto');  // <- add the UA-ID 
+  </script>
   <script src="assets/libs/jquery/jquery.min.js"></script>
   <!-- BEGIN PAGE LEVEL PLUGINS -->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <!--<script src="https://maps.google.com/maps/api/js?libraries=geometry&v=3.26&key=AIzaSyBBjLDxcCjc4s9ngpR11uwBWXRhyp3KPYM"></script>-->
   <!-- END PAGE LEVEL PLUGINS -->
 </body>
