--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,14 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@kulturekintzak">
+  <meta name="twitter:image" content="assets/img/defaults/kulturekintzak.svg">
+
+  <!-- Open Graph data -->
+  <meta property="og:type" content="article"/>
+  <meta property="og:image" content="assets/img/defaults/kulturekintzak.svg"/>
 
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link rel="stylesheet" type="text/css" href="assets/libs/bootstrap/css/bootstrap.min.css">
